--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 p {
     font-family: Verdana;
 	font-weight: bold;
-	text-align: center;
+    text-align: center;
+    padding: 25px 50px 75px 100px;
 }
 
 header {
@@ -28,4 +29,8 @@ h1 {
 
  h3 {
      color: red
+ }
+
+ #index {
+     color: blue;
  }
